fix: body content align center

--- a/momentum/style.css
+++ b/momentum/style.css
@@ -11,7 +11,7 @@ body {
     align-items: center;
     text-align: center;
     font-family: 'Quicksand', sans-serif;
-    height: 100%;
+    height: 100vh;
 }
 
 .time {
